arriendatufinca/microk8/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arriendatufinca
  namespace: proyecto
spec:
  selector:
    matchLabels:
      app: arriendatufinca
  replicas: 1
  template:
    metadata:
      labels:
        app: arriendatufinca
    spec:
      imagePullSecrets:
        - name: github-secret
      containers:
        - name: ArriendaTuFinca
          image: localhost:5000/test:latest
          ports:
            - containerPort: 8080
