arriendatufinca/microk8/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arriendatufinca
  namespace: proyecto
spec:
  selector:
    app: arriendatufinca
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
