arriendatufinca/microk8/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arriendatufinca
  namespace: proyecto
spec:
  ingressClassName: public
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arriendatufinca
                port:
                  number: 8080
